Fixed the issue of the overlapping div on the contact us page

--- a/main_stylesheet.css
+++ b/main_stylesheet.css
@@ -520,6 +520,7 @@ body{
 
 .contact-us-body .row{
     padding : 40px 30px;
+    margin : 0px;
 }
 
 .contactuslist{
